# b_fastapi

./: 1  Dockerfile  README.md  pyproject.toml  requirements.txt  upload_log.txt
src/b_fastapi/: .main.py.swp  main.py
